Migrate from IntelliJ-only build to Gradle
Replace hardcoded IntelliJ build artifacts and JavaFX SDK paths with a
Gradle build using the javafx plugin. The project can now be built and
run with ./gradlew build and ./gradlew run without any manual SDK setup.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>